# adflow-api

./: .env.example  .gitignore  config.py  main.py  pyproject.toml  render.yaml  requirements.txt
agents/: __init__.py  base.py  copywriter.py  designer.py  pm.py  prompts.py  strategist.py
core/: __init__.py  orchestrator.py
models/: __init__.py  artifact.py  creative.py  project.py  strategy.py
routes/: __init__.py  artifacts.py  projects.py
services/: __init__.py  image_gen.py  llm.py  parser.py
